# bitcoin

./: .appveyor.yml  .cirrus.yml  .gitignore  CONTRIBUTING.md  INSTALL.md  Makefile.am  README.md  REVIEWERS  SECURITY.md  configure.ac  genesis  libtangerineconsensus.pc.in  main.node
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.tx/: config
build_msvc/: .gitignore  README.md  libsecp256k1_config.h  msvc-autogen.py  tangerine.sln  tangerine_config.h  vcpkg.json
contrib/: README.md  gitian-build.py  install_db4.sh  tangerine-cli.bash-completion  tangerine-tx.bash-completion  tangerined.bash-completion  valgrind.supp
depends/: Makefile  README.md  description.md  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-android.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  external-signer.md  files.md  fuzzing.md  gitian-building.md  guix.md  init.md  multiprocess.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tangerine-conf.md  tor.md  translation_process.md  translation_strings_policy.md  zmq.md
doc/man/: Makefile.am  tangerine-cli.1  tangerine-qt.1  tangerine-tx.1  tangerine-util.1  tangerine-wallet.1  tangerined.1
share/: genbuild.sh  setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  addrdb.h  (+120 more)
(+792 files in other folders)
