dist_man1_MANS=

if BUILD_TANGERINED
  dist_man1_MANS+=tangerined.1
endif

if ENABLE_QT
  dist_man1_MANS+=tangerine-qt.1
endif

if BUILD_TANGERINE_CLI
  dist_man1_MANS+=tangerine-cli.1
endif

if BUILD_TANGERINE_TX
  dist_man1_MANS+=tangerine-tx.1
endif

if BUILD_TANGERINE_UTIL
  dist_man1_MANS+=tangerine-util.1
endif

if ENABLE_WALLET
if BUILD_TANGERINE_WALLET
  dist_man1_MANS+=tangerine-wallet.1
endif
endif
